hoppscotch/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hoppscotch
spec:
 replicas: 0
 selector:
   matchLabels:
     app: hoppscotch
 template:
   metadata:
     labels:
       app: hoppscotch
   spec:
     containers:
       - name: hoppscotch
         image:  hoppscotch/hoppscotch:2026.9.0
         ports:
           - containerPort: 3000
           - containerPort: 3100
           - containerPort: 3170
